@@ -10,6 +10,8 @@ import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.WebDriver;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import static config.ProjectConfig.projectConfig;
@@ -20,37 +22,69 @@ public class BrowserStackDriver implements WebDriverProvider {
     @Override
     public WebDriver createDriver(@NonNull Capabilities capabilities) {
         String platform = System.getProperty("platform", "android");
-        if (platform.equals("android")) {
-            return androidDriver();
-        } else if (platform.equals("ios")) {
-            return IOSDriver();
-        } else {
-            return null;
-        }
+        return switch (platform) {
+            case "bs-android" -> bsAndroidDriver();
+            case "bs-ios" -> bsIOSDriver();
+            case "real-device", "emulator" -> localAndroidDriver();
+            default -> null;
+        };
     }
 
-    private WebDriver androidDriver() {
-        UiAutomator2Options options = new UiAutomator2Options();
-        options.setCapability("appium:app", projectConfig.browserstackApp());
-        options.setCapability("appium:deviceName", projectConfig.deviceName());
-        options.setCapability("appium:platformVersion", projectConfig.platformVersion());
+    private WebDriver bsAndroidDriver() {
+        UiAutomator2Options options = new UiAutomator2Options()
+                .setApp(projectConfig.browserstackApp())
+                .setDeviceName(projectConfig.deviceName())
+                .setPlatformVersion(projectConfig.platformVersion());
+//        options.setCapability("appium:app", projectConfig.browserstackApp());
+//        options.setCapability("appium:deviceName", projectConfig.deviceName());
+//        options.setCapability("appium:platformVersion", projectConfig.platformVersion());
 
         return new AndroidDriver(getServerUrl(), options);
     }
 
-    private WebDriver IOSDriver() {
-        XCUITestOptions options = new XCUITestOptions();
-        options.setCapability("appium:app", projectConfig.browserstackApp());
-        options.setCapability("appium:deviceName", projectConfig.deviceName());
-        options.setCapability("appium:platformVersion", projectConfig.platformVersion());
+    private WebDriver bsIOSDriver() {
+        XCUITestOptions options = new XCUITestOptions()
+                .setApp(projectConfig.browserstackApp())
+                .setDeviceName(projectConfig.deviceName())
+                .setPlatformVersion(projectConfig.platformVersion());
+//        options.setCapability("appium:app", projectConfig.browserstackApp());
+//        options.setCapability("appium:deviceName", projectConfig.deviceName());
+//        options.setCapability("appium:platformVersion", projectConfig.platformVersion());
 
         return new IOSDriver(getServerUrl(), options);
     }
 
+    private WebDriver localAndroidDriver() {
+        UiAutomator2Options options = new UiAutomator2Options()
+                .setPlatformName("")
+                .setPlatformVersion("")
+                .setAutomationName("")
+                .setApp("")
+                .setAppPackage("")
+                .setAppActivity("");
+
+//        options.setCapability("appium:app", projectConfig.browserstackApp());
+//        options.setCapability("appium:deviceName", projectConfig.deviceName());
+//        options.setCapability("appium:platformVersion", projectConfig.platformVersion());
+
+        return new AndroidDriver(getServerUrl(), options);
+    }
+
     private URL getServerUrl() {
+        String platform = System.getProperty("platform", "android");
         try {
-            return new URL(String.format(projectConfig.browserstackUrl(), projectConfig.browserstackUser(), projectConfig.browserstackKey()));
-        } catch (MalformedURLException e) {
+            if (platform.equals("bs-android") || platform.equals("bs-ios")) {
+                return new URL(String.format(
+                        projectConfig.browserstackUrl(),
+                        projectConfig.browserstackUser(),
+                        projectConfig.browserstackKey()
+                ));
+            } else if (platform.equals("real-device") || platform.equals("emulator")) {
+                return new URI(projectConfig.appiumUrl()).toURL();
+            } else {
+                throw new RuntimeException("Передано неверное название платформы");
+            }
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
